--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "discord-statuspage-v2",
-  "version": "1.0.0",
+  "name": "statuspage",
+  "version": "2.0.0",
   "main": "index.js",
   "license": "MIT",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "devDependencies": {
     "@types/node": "^13.9.8",
     "@types/node-fetch": "^2.5.5",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard-with-typescript": "^15.0.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "4",
     "typescript": "^3.8.3"
   },
   "dependencies": {
