--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "statuspage_io",
+  "name": "statuspage-updates",
+  "author": "Ben Richeson",
   "description": "Check a https://statuspage.io/ statuspage for updates",
   "types": "build/index.d.ts",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "main": "build/index.js",
   "license": "MIT",
   "scripts": {
